@@ -58,16 +58,16 @@
     <Compile Include="Models\DummyEnumModel.cs" />
     <Compile Include="Models\PrimitiveTypesModel.cs" />
     <Compile Include="Models\DummyStringModel.cs" />
-    <Compile Include="Tests\FixedWidthParser\StringTest.cs" />
+    <Compile Include="Tests\FixedWidthParser\StringTests.cs" />
     <Compile Include="Tests\LayoutDescriptor\GenericCollectionTests.cs" />
     <Compile Include="Tests\LayoutDescriptor\ConventionBasedTypeConverterTests.cs" />
     <Compile Include="Tests\LayoutDescriptor\ParserTestBase.cs" />
     <Compile Include="Tests\ParseWithTypeConverter\ParseWithCustomTypeConverterTests.cs" />
     <Compile Include="Tests\TypeConverter\CustomTypeConvertTests.cs" />
     <Compile Include="Tests\TypeConverter\DateTimeConverterTests.cs" />
-    <Compile Include="Tests\FixedWidthFileWriter\FixedWidthFileWriterTest.cs" />
+    <Compile Include="Tests\FixedWidthFileWriter\FixedWidthFileWriterTests.cs" />
     <Compile Include="Tests\TypeConverter\Helpers\PrimitiveTypeExpectations.cs" />
-    <Compile Include="Tests\TypeConverter\PrimitiveTypesTest.cs" />
+    <Compile Include="Tests\TypeConverter\PrimitiveTypesTests.cs" />
     <Compile Include="Tests\LayoutDescriptor\ExpressionTests.cs" />
     <Compile Include="Infrastructure\FixedLayout\FixedFootballLayout.cs" />
     <Compile Include="Models\FootballScore.cs" />
