@@ -10,7 +10,7 @@ using Microsoft.VisualStudio.TestTools.UnitTesting;
 namespace FlatFileParserUnitTests.Tests.FixedWidthParser
 {
     [TestClass]
-    public class StringTest : ParserTestBase<DummyStringModel>
+    public class StringTests : ParserTestBase<DummyStringModel>
     {
         [TestMethod]
         public void Should_ParseAllFieldsMatchingExpected_When_ParseFileIsCalled()
@@ -53,7 +53,7 @@ namespace FlatFileParserUnitTests.Tests.FixedWidthParser
         protected override string GetFilePath()
         {
             var directory = Path.GetDirectoryName(System.Reflection.Assembly.GetExecutingAssembly().Location);
-            return $"{directory}\\InputFiles\\StringTest.dat"; // file properties should be "Content" and "Copy If Newer" (or similar)
+            return $"{directory}\\InputFiles\\StringTests.dat"; // file properties should be "Content" and "Copy If Newer" (or similar)
         }
 
         protected override IFlatFileLayoutDescriptor<DummyStringModel> GetLayout()
